<resources>
    <string name="app_name">QuannaApp</string>
    <string name="password_string">Password</string>
    <string name="username_string">Username</string>
    <string name="incorrect_string">You can\'t login</string>
    <string name="Seconed_string">This is seconed activity!</string>
    <string name="login_string">Login</string>
    <string name="signup_string">Sign up</string>
    <string name="main_layout_string">Main Layout</string>
    <string name="my_account_string">My Account</string>
    <string name="settings_string">Settings</string>
    <string name="log_out_string">Log out</string>
    <string name="open">Open</string>
    <string name="close"></string>
    <string name="thirdActivity_string">Welcome to third activity!</string>
    <string name="my_profile_string">My profile</string>
    <string name="home_string">Home</string>
    <string name="my_history_string">My history</string>
    <string name="search_for_best_fit_string">Search for best fit</string>
    <string name="search_for_best_location_string">Search for best location</string>
    <string name="connect_to_device_string">Connect to device</string>
    <string name="welcome_to_quanna_string">Welcome to Quanna!</string>
    <string name="review_string">Review</string>
    <string name="Sample_string">Sample</string>
    <string name="my_profile_string2">My profile</string>
    <string name="my_history_string2">My history</string>
    <string name="best_fit_string">Best fit</string>
    <string name="search_for_location_string2">Search for location</string>
    <string name="enter_store_name_string">Enter store name</string>
    <string name="connect_to_device_string2">Connect to device</string>
    <string name="incorrect_username_password_string">Incorrect Username/Password</string>
    <string name="desc">image</string>
    <string name="how_to_sample_string">How to sample?</string>
    <string name="instruction_of_sampling_string">**Instruction of sampling**</string>
    <string name="sample_now_string">Sample now!</string>
    <string name="sample_complete_succesfuly_string">Sample complete succesfuly</string>
    <string name="results_string">Results:</string>
    <string name="review2_string">Review</string>
    <string name="write_your_review_here_string">Write your review here</string>
    <string name="send_review">Send review</string>
    <string name="home2_string">Home</string>
</resources>
